[project]
name = "supabaseintreg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.1.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "polars>=1.32.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "supabase>=2.18.1",
]
